Fix small overflow issue with movie dialog.

--- a/src/app/movie-poll-item/movie-dialog/movie-dialog.scss
+++ b/src/app/movie-poll-item/movie-dialog/movie-dialog.scss
@@ -255,7 +255,12 @@ div.dialog-content {
   &-selector {
     &s {
       height: 100%;
+      
       width: 100%;
+      width: -moz-available;
+      width: -webkit-fill-available;
+      width: fill-available;
+
       display: flex;
       justify-content: center;
       align-items: flex-end;
